; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/crt/stdio/extr_file.c_msvcrt_free_fd.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/crt/stdio/extr_file.c_msvcrt_free_fd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32 }

@__badioinfo = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@INVALID_HANDLE_VALUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c":fd (%d) freed\0A\00", align 1
@STD_INPUT_HANDLE = common dso_local global i32 0, align 4
@STD_OUTPUT_HANDLE = common dso_local global i32 0, align 4
@STD_ERROR_HANDLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @msvcrt_free_fd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @msvcrt_free_fd(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.TYPE_5__* @get_ioinfo(i32 %4)
  store %struct.TYPE_5__* %5, %struct.TYPE_5__** %3, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = icmp ne %struct.TYPE_5__* %6, @__badioinfo
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i32, i32* @INVALID_HANDLE_VALUE, align 4
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 8
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %12, i32 0, i32 0
  store i64 0, i64* %13, align 8
  br label %14

14:                                               ; preds = %8, %1
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @TRACE(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load i32, i32* %2, align 4
  %18 = icmp slt i32 %17, 3
  br i1 %18, label %19, label %31

19:                                               ; preds = %14
  %20 = load i32, i32* %2, align 4
  switch i32 %20, label %30 [
    i32 0, label %21
    i32 1, label %24
    i32 2, label %27
  ]

21:                                               ; preds = %19
  %22 = load i32, i32* @STD_INPUT_HANDLE, align 4
  %23 = call i32 @SetStdHandle(i32 %22, i32 0)
  br label %30

24:                                               ; preds = %19
  %25 = load i32, i32* @STD_OUTPUT_HANDLE, align 4
  %26 = call i32 @SetStdHandle(i32 %25, i32 0)
  br label %30

27:                                               ; preds = %19
  %28 = load i32, i32* @STD_ERROR_HANDLE, align 4
  %29 = call i32 @SetStdHandle(i32 %28, i32 0)
  br label %30

30:                                               ; preds = %19, %27, %24, %21
  br label %31

31:                                               ; preds = %30, %14
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %33 = call i32 @release_ioinfo(%struct.TYPE_5__* %32)
  ret void
}

declare dso_local %struct.TYPE_5__* @get_ioinfo(i32) #1

declare dso_local i32 @TRACE(i8*, i32) #1

declare dso_local i32 @SetStdHandle(i32, i32) #1

declare dso_local i32 @release_ioinfo(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
